# virtualfirm

./: DEVELOPMENT_CHECKLIST.md  Dockerfile  Makefile  README.md  docker-compose.yml  plan1.md  pyproject.toml
docs/: artifact-compatibility.md  gui-design.md  output-artifacts.md  qemu-adapter-design.md
references/: stm32f1_memory_map.md
references/memory_maps/: esp32.json  nrf52.json  stm32f1.json  stm32f4.json
samples/: README.md  demo_firmware.elf
schemas/: context.schema.json  emulation_result.schema.json  emulator_config.schema.json  inference.schema.json  loop_summary.schema.json
src/firmware_mvp/: __init__.py  cli.py  compat.py  emulator.py  emulator_backends.py  extractor.py  ghidra.py  ghidra_export_context.py  gui.py  ida.py  ida_export_context.py  inference.py  inference_providers.py  models.py  pdf_ingest.py  rag.py  reference_db.py  reporting.py  services.py  validation.py
tests/: test_compat.py  test_docker_integration.py  test_gui.py  test_inference_providers.py  test_pipeline.py  test_reference_db.py  test_services.py
