[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "firmware-analysis-mvp"
version = "0.1.0"
description = "MVP pipeline for firmware context extraction, MMIO inference, and emulator config generation."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "ssammu" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]
qiling = ["qiling==1.4.6", "unicorn==2.0.1.post1", "setuptools<81"]
llm = ["openai>=1.0"]

[project.scripts]
firmware-mvp = "firmware_mvp.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-m", "not docker_integration"]
markers = [
    "docker_integration: tests that require Docker-provisioned heavy emulation tools such as Qiling or QEMU",
]
